tests/valid/definite/Subtype_Valid_7.whiley
define int where $ > 0 as sr7nat

void System::main([string] args):
    (sr7nat f) x = (f:1)
    x.f = x.f + 1
    print str(x)
    
