tests/invalid/simple/Subtype_CompileFail_3.whiley
define scf3nat as int where $ > 0

void System::main([string] args):
    [scf3nat] x = [1]
    x[0] = -1
    
